--- a/src/theme.postcss
+++ b/src/theme.postcss
@@ -104,3 +104,7 @@ label {
     width: 100%;
     height: 300px;
   }
+  :global(div.multiselect > ul.options > li) {
+    height:60px;
+    min-height:60px;
+  }
