--- a/src/theme.postcss
+++ b/src/theme.postcss
@@ -108,3 +108,13 @@ label {
     height:60px;
     min-height:60px;
   }
+  thead{
+	position:sticky;
+	top:0px
+  }
+
+  .table-wrp  {
+	max-height: 75vh;
+	overflow-y: auto;
+	display:block;
+  }
